# ferriskey

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  docker-compose.local.yaml  docker-compose.yaml  docker-compose.yml
api/: .gitignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yaml  env.example
api/.sqlx/: query-0183d1d1124a0224bd79b817eb4a3889bbb4ccc22519bcef3906c11dac2f5985.json  query-0b3facb790684bb8c1be56c65ac1434ce43ad56f443d0b1c50f801949698ba91.json  query-1073988797be13da33801515053be2d4102a9d4f66f5d723f672715e9b5c6d40.json  query-1f40dfa475e78967982133dfb27ed845dcdc2370b3985e46ef63aa3e54f1849c.json  query-25013afb28116f8121e724ef1cd94579e29b9540a10bc8a950f3add3ed260923.json  query-2554dfa89b2a1371b204e9e9b96b0d2a68b59fb700f1baeea3a8b985c6834b3b.json  query-265d9a05913b5bb12b949c20ac38c531ef11112549c03c187286dccdc22479d3.json  query-2aec38ff09d6f4d319a42451deaafa0e2a23801c6065853dc1071d7d2ef0b84a.json  query-47adab1169b17f0f04e7ae0c9f7c700339f2f8f9363228f1dc4ff75fa53cd539.json  query-59453b1c12593217ae0039735b1d341e568b678f1f5d16b0f464aff2fc81e73e.json  query-6ae2338024d600aacff92fcd822acb43a7606fd4c8cf307be2b9d3f1f3baf004.json  query-7a302cf5d834c7421424fd4324d6080851a76387bab17c107ec3c38cb99336ce.json  query-7b6331b4d979d262610fcf5487cf74cd58bc22cb766d4df52f0712287a7322d5.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-9597a47740b552849868376799da087097f34a44742b658b4fc53d17d179c458.json  query-9894016ff04d629e07eba0e478c576b5e84b787b9a0e5ae35fea64f2fa2f3e4f.json  query-9ba519e03ecaac42530cd5b29996b88f7b400ea4cbf271bf4abbced44e6f73f6.json  query-9bd11053deaad26acd7c534487fae3ea58a5d0b2fa5548929314207df919d3a7.json  query-aebfa4bc8a4841094909238067e0b6322b2a23d147fb5e5a6010c7b03ac10ed8.json  query-b21273d1de3c7ca63cb038bf506c24dcfd7eb13b683b118ab5323022d271f4f4.json  query-b7b9384e586aff0145052c7e0649464a80105ad53fa5282d877de12f53e7261a.json  query-c23829d284cb4910ce54ad6d4c0e4b55b5e078bef1cccbf44e75f430860a0d40.json  query-c8edc4d20f8c7378001770148ab09ba1d66a50194eecd32e1ae0045f905c743c.json  query-cc3d5bb49e189f876f5cc8e46e117b69a52ba5c5d8c84accd9bb4f92bd8c3ecc.json  query-d467cc8ec454d13f9eeb213309e4351bcb049421f200be1798835f63aee99537.json  query-d5ecb7a47418f8d189c93292cf9827d0665f7c35f980ad24d17e60786bbf8e56.json  query-dc12c7fc0a36b86f23223de06167c419660d801c946786257fd560c0154d3c86.json  query-e07e4154690208dbb736cf7b656967bd7194404b68dc4387342fd2d0607adcc2.json  query-e906cce5a381820d99aed6d82f577c746dcf2cd52bf3bcfaff28667c950cd21a.json  query-ed0e88ae63a490c420db4068c32e76085c42e75ee6ee6babee94ae1b1691c0b9.json  query-f080cb2770e99a5c1dfc7a019d43060376f96e02a37352394c6e5800627caf78.json  query-f156afc3cc91d323e1a16140aef8c88cb29566e48265579bf0a7db31602fcc45.json  query-f4614566ffb4f2f7dc5b130f002fa820a2efcbceb0064fecf3dafed5636a5af0.json  query-f9f284c37efa0c8c7c950e8a300ed920e7546a85a687bb030b7f429d2e5858e0.json  query-fd0f70426d14e0a023f14fe0e30e1f7472811563d0d68b0eece98d2bf09d155d.json
api/entity/: .gitignore
api/migrations/: 20250320130822_add_realms.down.sql  20250320130822_add_realms.up.sql  20250320192139_add_clients.down.sql  20250320192139_add_clients.up.sql  20250322185202_realm_settings.down.sql  20250322185202_realm_settings.up.sql  20250323235038_add_users.up.sql  20250323235041_add_credentials.up.sql  20250324135355_add_user_session.up.sql  20250403232413_add_auth_sessions.down.sql  20250403232413_add_auth_sessions.up.sql  20250408144948_redirect_uris.down.sql  20250408144948_redirect_uris.up.sql  20250421122239_create-refresh-token.down.sql  20250421122239_create-refresh-token.up.sql  20250424150019_create_role.down.sql  20250610004508_add_credential_user_cascade_delete.down.sql  20250610004508_add_credential_user_cascade_delete.up.sql  20250711222039_user_required_actions.down.sql  20250711222039_user_required_actions.up.sql
api/src/: args.rs  env.rs  lib.rs
core/: .gitignore  Cargo.toml  build.rs
core/entity/: .gitignore
core/migrations/: 20250322185202_realm_settings.up.sql  20250323235041_add_credentials.up.sql  20250424150019_create_role.up.sql  20250518003558_add_constraint_role_table.down.sql  20250518003558_add_constraint_role_table.up.sql  20250601180719_create_jwt_keys.down.sql  20250601180719_create_jwt_keys.up.sql  20250607214742_add_user_client_cascade_delete.down.sql  20250607214742_add_user_client_cascade_delete.up.sql  20250620032427_add_unique_constraint_user_role_user_id_role_id.down.sql  20250620032427_add_unique_constraint_user_role_user_id_role_id.up.sql  20250711222040_create_webhooks.down.sql  20250711222040_create_webhooks.up.sql  20250812143246_add_temporary_column_credentials.down.sql  20250812143246_add_temporary_column_credentials.up.sql  20250823153514_add_direct_access_grants_enabled_to_clients.down.sql  20250823153514_add_direct_access_grants_enabled_to_clients.up.sql  20250823153601_add_name_and_description_to_webhook.up.sql  (+4 more)
operator/: .gitignore  Cargo.toml  Dockerfile
(+1021 files in other folders)
