[package]
name = "api"
version = "0.1.0"
edition = "2024"
authors = ["nathaelb <pro.nathaelbonnal@gmail.com>"]

[[bin]]
path = "src/bin/main.rs"
name = "ferriskey-server"

[lib]
path = "src/lib/lib.rs"
name = "ferriskey"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["typed-header", "typed-routing"] }
axum-macros = "0.5.0"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive", "env"] }
dotenv = "0.15.0"
rand = "0.9.0"
serde = "1.0.219"
sqlx = { version = "0.8.3", features = ["chrono", "postgres", "runtime-tokio", "uuid", "macros"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
utoipa = { version = "5.3.1", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
uuid = { version = "1.16.0", features = ["serde", "v4", "v7"] }
validator = { version = "0.20.0", features = ["derive"] }
