[package]
name = "api"
version = "0.1.0"
edition = "2024"
authors = ["nathaelb <pro.nathaelbonnal@gmail.com>"]

[workspace]
members = [".", "entity"]

[[bin]]
path = "src/bin/main.rs"
name = "ferriskey-server"

[lib]
path = "src/lib/lib.rs"
name = "ferriskey"

[dependencies]
entity = { path = "entity" }
anyhow = "1.0.97"
argon2 = "0.5.3"
async-trait = "0.1.77"
axum = "0.8.1"
axum-cookie = "0.2.3"
axum-extra = { version = "0.10.0", features = [
  "typed-header",
  "typed-routing",
] }
axum-macros = "0.5.0"
base64 = "0.22.1"
base64-url = "3.0.0"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive", "env"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
rand = "0.8.0"
regex = "1.11.1"
sea-orm = { version = "1.1.11", features = [
  "sqlx-postgres",
  "macros",
  "with-uuid",
] }
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = [
  "chrono",
  "postgres",
  "runtime-tokio",
  "uuid",
  "macros",
] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
typeshare = "1.0.4"
utoipa = { version = "5.3.1", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
uuid = { version = "1.16.0", features = ["serde", "v4", "v7"] }
validator = { version = "0.20.0", features = ["derive"] }
axum-test = "17.3.0"
rsa = { version = "0.9.8", features = ["pem"] }
