[package]
name = "ferriskey-core"
description = "Core business logic library for FerrisKey"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
base32 = "0.5.1"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
hmac = "0.12.1"
jsonwebtoken = "9.3.1"
rand = "0.8.0"
rsa = { version = "0.9.8", features = ["pem"] }
sea-orm = { version = "1.1.14", features = [
    "sqlx-postgres",
    "macros",
    "with-uuid",
] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sha1 = "0.10.6"
thiserror = "2.0.12"
tracing = "0.1.41"
urlencoding = "2.1.3"
uuid = { version = "1.16.0", features = ["serde", "v4", "v7"] }
utoipa = { version = "5.4.0", features = ["chrono", "uuid"] }
typeshare = "1.0.4"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
