[package]
name = "ferriskey-operator"
description = "FerrisKey Kubernetes Operator"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
path = "src/main.rs"
name = "ferriskey-operator"


[dependencies]
kube = { version = "1.1.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.25.0", features = ["latest"] }
tokio = { version = "1.45.1", features = ["full"] }
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tower = "0.5.2"
tower-http = "0.6.6"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
kube-runtime = "1.1.0"
schemars = "0.8.22"
serde_yaml = "0.9.34"
kube-derive = "1.1.0"
futures = "0.3.31"
